[tool.poetry]
name = "underbelly"
version = "0.0.1"
description = "The rust underpinnings to the Jamboree library."
authors = ["karamel <kivo360@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.0.1"
pytest-sugar = "^0.9.4"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest-emoji = "^0.2.0"
pytest-clarity = "^0.3.0-alpha.0"
pytest-timeout = "^1.4.2"
pytest-xdist = "^2.0.0"
pytest-parallel = "^0.1.0"
pytest-benchmark = "^3.2.3"
pytest-mock = "^3.3.0"
pytest-icdiff = "^0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
